--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -1,5 +1,23 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@incollection{cremet2006core,
+  title={A core calculus for Scala type checking},
+  author={Cremet, Vincent and Garillot, Fran{\c{c}}ois and Lenglet, Sergue{\"\i} and Odersky, Martin},
+  booktitle={Mathematical Foundations of Computer Science 2006},
+  pages={1--23},
+  year={2006},
+  publisher={Springer}
+}
+
+@incollection{odersky2003nominal,
+  title={A nominal theory of objects with dependent types},
+  author={Odersky, Martin and Cremet, Vincent and R{\"o}ckl, Christine and Zenger, Matthias},
+  booktitle={ECOOP 2003--Object-Oriented Programming},
+  pages={201--224},
+  year={2003},
+  publisher={Springer}
+}
+
 @inproceedings{meijer2004static,
   title={Static typing where possible, dynamic typing when needed: The end of the cold war between programming languages},
   author={Meijer, Erik and Drayton, Peter}
